--- a/static/css/navBarStyle.css
+++ b/static/css/navBarStyle.css
@@ -1,6 +1,3 @@
-.navbar{
-	max-width: 100%;
-}
 .navbar-inverse{
 	background-color: rgb(34,34,71) !important;
 }
@@ -43,13 +40,8 @@
 }
 .create-an-event-button{
 	background-color:rgba(206,53,64,0.7);
-	height: 2em;
-	font-size: 20px;
 	color:#ffffff;
-	width: 200px;
-	box-shadow: 8px 5px rgba(0,0,0,0.7);
-	border:none;
-	max-width: 80%;
+	box-shadow: 5px 5px rgba(0,0,0,0.7);
 	font-family: 'Roboto', sans-serif;
 }
 .create-an-event-button:hover{
